end of main news/fim das nóticias principais

--- a/Inde.html
+++ b/Inde.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Jornal Agora</title>
 </head>
+
 <body>
     <div class="main-container">
-        <header></header>
-        <main></main>
+        <header>
+            <h1 class="titulo">Jornal Agora</h1>
+        </header>
+        <main>
+            <div class="container1">
+                <div class="principal">
+                    <h1>
+                        Cerca de 200 países fecham acordo global sobre o clima que defende redução de combustíveis
+                        fósseis
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quod aspernatur cum pariatur eius,
+                        quis autem at rerum impedit repudiandae sequi perferendis enim ratione sed blanditiis fugit
+                        illum!
+                        Veritatis, ex.</p>
+                </div>
+                <div class="p-img1">
+                    <h2> Passeata contra a fome ocupa vias da cidade de SP neste sábado
+                    </h2>
+                </div>
+                <div class="p-img2">
+                    <h2>
+                        Com isopor e cerveja, moradores tomam banho em buraco de obra em rua de Belém
+                    </h2>
+                </div>
+            </div>
+            <div class="container2">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+        </main>
         <aside></aside>
         <footer></footer>
     </div>
 </body>
+
 </html>
