--- a/Inde.html
+++ b/Inde.html
@@ -37,11 +37,44 @@
                 </div>
             </div>
             <div class="container2">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
+                <div class="item">
+                    <img src="img/img column/img-column 1.jpg" class="news">
+                    <div>
+                        <h2>Áustria vai confinar quem não tomou a vacina contra Covid</h2>
+                        <p>Áustria vai confinar quem não tomou a vacina contra Covid</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/img column/img-column 2.jpg" class="news">
+                    <div>
+                        <h2>Bolsonaro suspendeu entrada no PL após repercussão nas redes e anúncio ter virado munição
+                            para
+                            Moro</h2>
+                        <p>Monitoramento das redes sociais mostra que Valdemar Costa Neto tem sua imagem muito ligada à
+                            do
+                            ex-presidente Lula.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/img column/img-column 3.jpg" class="news">
+                    <div>
+                        <h2>Cadastro Único: veja benefícios para quem está inscrito</h2>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/img column/img-column 4.jpg" class="news">
+                    <div>
+                        <h2>Por que é tão importante manter o cartão de vacinas em dia?</h2>
+                        <p>Saiba como as vacinas funcionam no nosso organismo e porque elas são métodos seguros para
+                            controlar doenças e salvar vidas</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/img column/img-column 5.jpg" class="news">
+                    <div>
+                        <h2>Inflação da Black Friday: o que está mais caro ou mais barato em 2021</h2>
+                    </div>
+                </div>
             </div>
         </main>
         <aside></aside>
