grid problem solved/problema no grid resolvido

--- a/Inde.html
+++ b/Inde.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <div class="main-container">
-        <header>
+    <header>
             <h1 class="titulo">Jornal Agora</h1>
         </header>
+    <div class="main-container">
         <main>
             <div class="container1">
                 <div class="principal">
@@ -37,14 +37,14 @@
                 </div>
             </div>
             <div class="container2">
-                <div class="item">
+                <div class="item gray-border">
                     <img src="img/img column/img-column 1.jpg" class="news">
                     <div>
                         <h2>Áustria vai confinar quem não tomou a vacina contra Covid</h2>
                         <p>Áustria vai confinar quem não tomou a vacina contra Covid</p>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item gray-border">
                     <img src="img/img column/img-column 2.jpg" class="news">
                     <div>
                         <h2>Bolsonaro suspendeu entrada no PL após repercussão nas redes e anúncio ter virado munição
@@ -55,13 +55,13 @@
                             ex-presidente Lula.</p>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item gray-border">
                     <img src="img/img column/img-column 3.jpg" class="news">
                     <div>
                         <h2>Cadastro Único: veja benefícios para quem está inscrito</h2>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item gray-border">
                     <img src="img/img column/img-column 4.jpg" class="news">
                     <div>
                         <h2>Por que é tão importante manter o cartão de vacinas em dia?</h2>
@@ -69,15 +69,34 @@
                             controlar doenças e salvar vidas</p>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item gray-border">
                     <img src="img/img column/img-column 5.jpg" class="news">
                     <div>
                         <h2>Inflação da Black Friday: o que está mais caro ou mais barato em 2021</h2>
                     </div>
                 </div>
             </div>
+            <div class="aside">
+                <h3>Notícias que podem te interessar:</h3>
+                <div class="item">
+                    <h3>Mãe de Marília Mendonça diz que neto ainda não sabe da morte da cantora: 'Para ele, a mãe foi
+                        trabalhar'</h3>
+                    <img src="img/img aside/img aside 1.jpg">
+                </div>
+                <div class="item">
+                    <h4>'Me sinto um derrotado', diz cirurgião plástico investigado após pacientes ficarem com narizes
+                        deformados</h4>
+                    <img src="img/img aside/img aside 2.jpg" alt="">
+                </div>
+                <div class="item">
+                    <h4>
+                        'O que incomoda é pobre comendo bem, não passando fome', diz cozinheira que doou acarajés
+                        servidos a Wagner Moura no MTST
+                    </h4>
+                    <img src="img/img aside/img aside 3.jpg">
+                </div>
+            </div>
         </main>
-        <aside></aside>
         <footer></footer>
     </div>
 </body>
