reponsividade feita/responsivity done

--- a/Inde.html
+++ b/Inde.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>Jornal Agora</title>
 </head>
 
@@ -97,7 +98,10 @@
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <h2><a href="https://github.com/Vitor-Augusto-Lima" target="_blank">Github</a></h2>
+            <p>Imagens e notícias pertencentes ao site: https://g1.globo.com/</p>
+        </footer>
     </div>
 </body>
 
